--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -39,3 +39,126 @@
     }
   }
 }
+
+// Menu overlaya
+
+.menu {
+  position: fixed;
+  top: 0%;
+  width: 100%;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav,
+  &-img {
+    z-index: 2;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    z-index: 3;
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 6);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+    opacity: 0.7;
+
+    &.show {
+      //slide in from top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  // Branding Side
+  &-branding {
+    background: $primary-color;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+    opacity: 0.7;
+
+    &.show {
+      //slide in from bottom
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  &-img {
+    z-index: 3;
+    top: 38vh;
+    left: 14vw;
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    background: url('../img/profile-pic-small.jpg');
+    border-radius: 50%;
+    border: solid 5px $secondary-color;
+    visibility: hidden;
+    opacity: 0;
+    transition-duration: 1.2s, 1.2s;
+    transition-property: visibility, opacity;
+    transform: translate3d(0, 300%, 0);
+    @include easeOut;
+
+    &.show {
+      //slide in from bottom
+      visibility: visible;
+      opacity: 1;
+      transition-duration: 1.2s, 1.2s;
+      transition-property: visibility, opacity;
+      transform: translate3d(0, 0, 0);
+      @include easeOut;
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show {
+      //slide in from bottom
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    z-index: 3;
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 400;
+    color: #fff;
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+//Delay each nav item slide by 0.15s
+
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.15s;
+  }
+}
