--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -103,6 +103,7 @@
     width: 250px;
     height: 250px;
     background: url('../img/profile-pic-small.jpg');
+    background-size: cover;
     border-radius: 50%;
     border: solid 5px $secondary-color;
     visibility: hidden;
