--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -61,6 +61,16 @@
     transform: translate3d(300%, 0, 0);
     @include easeOut;
   }
+
+  .about-info {
+    grid-template-areas:
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
+    grid-template-columns: 1fr;
+  }
 }
 
 // Smartphones
