--- a/scss/main.scss
+++ b/scss/main.scss
@@ -130,6 +130,33 @@ main {
   }
 }
 
+// Contact me page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1rem 1.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 1.5rem 2.4rem;
+      border-radius: 45%;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
+}
+
 // Buttons styles
 .btn {
   display: block;
