some fixes on my work page for project images height  was not even

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -115,17 +115,17 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 0.9rem;
+}
 
-  img {
-    width: 100%;
-    height: auto;
-    border: 3px #fff solid;
+.project-img {
+  height: 250px;
+  width: 100%;
+  border: 3px #fff solid;
 
-    &:hover {
-      opacity: 0.6;
-      border-color: $secondary-color;
-      @include easeOut;
-    }
+  &:hover {
+    opacity: 0.6;
+    border-color: $secondary-color;
+    @include easeOut;
   }
 }
 
